--- a/index.html
+++ b/index.html
@@ -1,65 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Игра Угадайка</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Угадайка</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
+
 <body>
     <div class="container">
         <div class="row game-card align-items-center">
-            <div class="col col-md-6 offset-md-3">
+            <div class="col col-md-4 offset-md-4">
                 <div class="card text-center">
                     <div class="card-header">
-                        <p class="m-0 title-page collapse show" id="titlePage">Игра Угадайка</p>
-                        <p class="m-0 value-range hidden">Диапазон значений</p>
-                        <p class="m-0 terms hidden">Условия</p>
-                        <p class="m-0 question hidden">Вопрос № <span id="orderNumberField">5</span></p>
+                        <h1>Игра-угадайка</h1>
                     </div>
-
-                    <div class="card-body">
-
-                        <p class="valueRange hidden">Введите минимальное и максимальное значения чисел для игры (от -999 до 999)</p>
-                        <p class="guessNumber hidden"><span id="guessNumber"></span></p>
-
-                        <form class="form-inline hidden">
-                            <div class="form-group">
-                                <label for="formInputMin">От</label>
-                                <input type="text" class="form-control" id="formInputMin" placeholder="0">
-                            </div>
-                            <div class="form-group">
-                                <label for="formInputMax">До</label>
-                                <input type="text" class="form-control" id="formInputMax" placeholder="100">
-                            </div>
-                        </form>
-
-                        <div class="row no-gutters hidden">
-                            <div class="col">
-                                <h3 class="card-title m-0"><span id="answerField">Вы загадали число 5?</span></h3>
-                            </div>
+                    <div class="card-body collapse" id="settingsGame">
+                        <h3>Диапазон значений</h3>
+                        <p>Введите число от <span class="text-success">-999</span> до <span class="text-success">999</span></p>
+                        <p>И загадайте любое число в выбранном диапазоне</p>
+                        <div class="mb-3">
+                            <label class="form-label">Минимальное значение:</label>
+                            <input class="form-control number-input border-success" type="text" id="minValue">
                         </div>
-
+                        <div class="mb-3">
+                            <label class="form-label">Максимальное значение:</label>
+                            <input class="form-control number-input border-success" type="text" id="maxValue">
+                        </div>
+                        <button class="btn btn-success" id="startGame">Начать игру</button>
                     </div>
-
-                    <div class="card-body">
-                        <button class="btn btn-outline-secondary hidden" id="btnLess">&#129047;<br>меньше</button> 
-                        <button class="btn btn-outline-dark btn-lg hidden" id="btnEqual">Верно!</button> 
-                        <button class="btn btn-outline-secondary hidden" id="btnOver">больше<br>&#129045;</button> 
+                    <div class="card-body collapse show" id="game">
+                        <div>
+                            <p class="m-0">Вопрос №<span id="orderNumberField"></span></p>
+                            <h3 class="card-title" id="answerField"></h3>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
+                            <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
+                            <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button>
+                        </div>
                     </div>
-                    
                     <div class="card-footer">
-                        <button class="btn btn-outline-dark btnTobegin collapsed" id="btnTobegin" data-bs-toggle="collapse" data-bs-target="#titlePage">Начать игру</button>
-                        <button class="btn btn-outline-dark hidden" id="btnProceed">Продолжить</button> 
-                        <button class="btn btn-outline-dark hidden" id="btnPlay">Играть</button>
-                        <button class="btn btn-link hidden" id="btnRetry">Заново</button>
+                        <div class="card-body collapse show" id="footerStart" >
+                            <button class="btn btn-success" id="btnRetry">Заново</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
